[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Difficulty.gd" type="Script" id=1]
[ext_resource path="res://scenes/MenuButtons.gd" type="Script" id=2]
[ext_resource path="res://Global.gd" type="Script" id=3]
[ext_resource path="res://fonts/KdamThmorPro-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/Start.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_right = 576.0
margin_bottom = 1024.0
color = Color( 0.666667, 0.929412, 0.647059, 1 )

[node name="UI" type="Node2D" parent="."]

[node name="Title" type="Label" parent="UI"]
margin_top = 300.0
margin_right = 576.0
margin_bottom = 424.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Simplifall"
align = 1
valign = 1

[node name="MenuButtons" type="Node2D" parent="UI"]
position = Vector2( 0, 400 )
script = ExtResource( 2 )

[node name="Start" type="Node2D" parent="UI/MenuButtons"]
script = ExtResource( 5 )

[node name="StartMenu" type="VBoxContainer" parent="UI/MenuButtons/Start"]
margin_right = 576.0
margin_bottom = 305.0

[node name="Start" type="Button" parent="UI/MenuButtons/Start/StartMenu"]
margin_right = 576.0
margin_bottom = 99.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Start"
flat = true

[node name="Settings" type="Button" parent="UI/MenuButtons/Start/StartMenu"]
margin_top = 103.0
margin_right = 576.0
margin_bottom = 202.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Settings"
flat = true

[node name="Quit" type="Button" parent="UI/MenuButtons/Start/StartMenu"]
margin_top = 206.0
margin_right = 576.0
margin_bottom = 305.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Quit"
flat = true

[node name="move_tween" type="Tween" parent="UI/MenuButtons/Start"]

[node name="Difficulty" type="Node2D" parent="UI/MenuButtons"]
position = Vector2( 576, 0 )
script = ExtResource( 1 )

[node name="DifficultyMenu" type="VBoxContainer" parent="UI/MenuButtons/Difficulty"]
margin_right = 576.0
margin_bottom = 305.0

[node name="Easy" type="Button" parent="UI/MenuButtons/Difficulty/DifficultyMenu"]
margin_right = 576.0
margin_bottom = 99.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Easy"
flat = true

[node name="Normal" type="Button" parent="UI/MenuButtons/Difficulty/DifficultyMenu"]
margin_top = 103.0
margin_right = 576.0
margin_bottom = 202.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Normal"
flat = true

[node name="Hard" type="Button" parent="UI/MenuButtons/Difficulty/DifficultyMenu"]
margin_top = 206.0
margin_right = 576.0
margin_bottom = 305.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Hard"
flat = true

[node name="Back" type="Button" parent="UI/MenuButtons/Difficulty/DifficultyMenu"]
margin_top = 309.0
margin_right = 576.0
margin_bottom = 408.0
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Back"
flat = true

[node name="move_tween" type="Tween" parent="UI/MenuButtons/Difficulty"]

[node name="Score" type="Node2D" parent="."]

[node name="Buttons" type="Node2D" parent="."]

[node name="Emitters" type="Node2D" parent="."]

[node name="Global" type="Node2D" parent="."]
script = ExtResource( 3 )

[connection signal="pressed" from="UI/MenuButtons/Start/StartMenu/Start" to="UI/MenuButtons" method="StartPressed"]
[connection signal="pressed" from="UI/MenuButtons/Start/StartMenu/Quit" to="UI/MenuButtons" method="_on_Quit_pressed"]
[connection signal="pressed" from="UI/MenuButtons/Difficulty/DifficultyMenu/Back" to="UI/MenuButtons" method="_on_Back_pressed"]
